# apple-music-album-library-migrator

./: Cargo.toml  README.md
src/: main.rs  matching.rs
src/apple_music/: client.rs  mod.rs
src/apple_music/api_types/: catalog_album.rs  library_album.rs  mod.rs
src/apple_music/custom_types/: mod.rs
